--- a/.github/workflows/cog-push.yaml
+++ b/.github/workflows/cog-push.yaml
@@ -23,7 +23,12 @@ jobs:
                   REPLICATE_API_TOKEN: ${{ secrets.REPLICATE_API_TOKEN }}
               run: |
                   python -m pip install --upgrade pip
-                  python -m pip install cog
+                  # install cog to the user site (which goes under ~/.local/bin)
+                  python -m pip install --user cog
+
+                  # make sure ~/.local/bin is on PATH so `cog` is visible
+                  export PATH="$HOME/.local/bin:$PATH"
+
                   cog --version
                   cog login --token "${{ secrets.REPLICATE_API_TOKEN }}"
                   cog push ${{ secrets.REPLICATE_MODEL_ID }}
